# xdg-apply

./: Cargo.toml  applications.yml  cli.txt
lib/: Cargo.toml
lib/src/: alias.rs  application.rs  directory.rs  file.rs  globals.rs  lib.rs  preset.rs  xdgvar.rs
xdg-apply/: Cargo.toml
xdg-apply/src/: main.rs
xdg-proxy/: Cargo.toml
xdg-proxy/src/: main.rs
