[package]
name = "xdg-apply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
dirs = "4.0.0"
lazy_static = "1.4.0"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
toml = "0.5.8"
xdg = "2.4.1"
walkdir = "2"
lib = { path = "../lib" }
